# home-remote-desktop

./: .gitignore  README.md  hrd-python.cmd  install.bat  pyproject.toml  python.cmd  requirements-performance.txt  requirements.txt  run-client-codex-python.bat  run-client.bat  run-server-codex-python.bat  run-server.bat
android-client/: README.md  gradlew  gradlew.bat  settings.gradle
android-client/app/: build.gradle
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/example/homeremotedesktop/: MainActivity.java
android-client/app/src/main/res/values/: styles.xml
home_remote_desktop/: __init__.py  client.py  common.py  install_helpers.py  server.py
